welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
def fonctionTest() : boolean =  {
	var rep = false
	if (estFaceMur) {
		droite() ; 
		if (estFaceMur) {
			gauche() ; rep = true; 
		}
	}
	return rep
}
}
